next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk, 6.1-dev, future 6.2): 
------------------------------------------------- 

- Changed msRemoveStyle to allow removing all styles (#3895)

- Fixed mssql2008 to return correct geometries with chart layer type (#3894)

- Ensure msLayerSetProcessingKey() supports setting a NULL value to clear
  a processing key. 

- Write SYMBOLSET/END tags when saving a symbol file (#3885)

- Make java threadtests work again (#3887)

- Fix segfault on malformed <PropertyIsLike> filters (#3888)

- Fixed the query handling problem with the Oracle spatial driver (#3878)

- Fixed potential crash with AVERAGE resampling and crazy reprojection (#3886)

- Adjusted OperationsMetadata for POST in WCS 2.0 GetCapabilities response

- Fix for the warnings in mapunion.c (#3880)

- SLD: correct when same layer is used with multiple styles (#1602)

- Fixed the build problem in mapunion.c (#3877)

- Implement to get all shapes with the clustered layer (#3873)

- Union layer: Fixed the crash when styling source layers using attributes (#3870)

- Added GEOS difference operator to expression support (#3871) 

Version 6.0.0 (2011-05-11)
--------------------------

- apply fix for #3834 on legend icon rendering (#3866)

- Union layer: Fixed a potential seg fault in msUnionLayerNextShape (#3859)

- Cluster layer: Fixed the problem when returning undefined attribute (#3700)

- Union layer: Fix for the item initialization at the source layer (#3859)

- Union layer: Fixed the potential seg fault when STYLEITEM AUTO is used (#3859)

Version 6.0.0-rc2 (2011-05-05)
------------------------------

- Fixed seg fault with [shpxy] tag... (#3860)

- Removed obsolete msQueryByOperator() function
